[gd_scene load_steps=14 format=2]

[ext_resource path="res://fonts/ArialTh.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Level3/Museum/Museum-B18.png" type="Texture" id=2]
[ext_resource path="res://Level3/Museum/Gelaendemodell.gd" type="Script" id=3]
[ext_resource path="res://Level3/Museum/museum_bg.PNG" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 2
border_color = Color( 0.235294, 0.376471, 0.854902, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 2
border_color = Color( 0.0627451, 0.227451, 0.780392, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 2
border_color = Color( 0.0627451, 0.227451, 0.780392, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.486275 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0196078, 0.0156863, 0.0156863, 0.34902 )

[sub_resource type="DynamicFont" id=2]
size = 52
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 35
use_filter = true
font_data = ExtResource( 1 )

[node name="Museum_Gelaendemodell" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1925.0
margin_bottom = 1076.0
texture = ExtResource( 4 )
expand = true

[node name="texture" type="TextureRect" parent="."]
margin_left = 728.0
margin_top = 238.0
margin_right = 1027.0
margin_bottom = 470.0
texture = ExtResource( 2 )

[node name="Button_moreInfo" type="Button" parent="."]
margin_left = 1482.0
margin_top = 23.0
margin_right = 1714.0
margin_bottom = 96.0
custom_colors/font_color_focus = Color( 0.0627451, 0.227451, 0.780392, 1 )
custom_colors/font_color = Color( 0.0627451, 0.227451, 0.780392, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.376471, 0.854902, 1 )
custom_colors/font_color_pressed = Color( 0.0627451, 0.227451, 0.780392, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "More info"

[node name="Button_moreInfo2" type="Button" parent="."]
margin_left = 1438.0
margin_top = 819.0
margin_right = 1891.0
margin_bottom = 892.0
custom_colors/font_color_focus = Color( 0.0627451, 0.227451, 0.780392, 1 )
custom_colors/font_color = Color( 0.0627451, 0.227451, 0.780392, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.376471, 0.854902, 1 )
custom_colors/font_color_pressed = Color( 0.0627451, 0.227451, 0.780392, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "More information about the settlements' town"

[node name="Button_back" type="Button" parent="."]
margin_left = 1629.0
margin_top = 970.0
margin_right = 1861.0
margin_bottom = 1043.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Back"

[node name="titel_label" type="Label" parent="."]
margin_left = 7.0
margin_top = 65.0
margin_right = 688.0
margin_bottom = 127.0
custom_colors/font_color = Color( 0.0627451, 0.227451, 0.780392, 1 )
custom_fonts/font = SubResource( 2 )
text = "The Heuneburg"

[node name="data" type="Label" parent="."]
margin_left = 15.0
margin_top = 141.0
margin_right = 347.0
margin_bottom = 236.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Topic: The city"

[node name="info_text" type="Label" parent="."]
margin_left = 1369.0
margin_top = 117.0
margin_right = 1905.0
margin_bottom = 780.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "The Heuneburg is an Iron Age hilltop settlement in Herbertingen-Hundersingen (Sigmaringen, Baden-WÃ¼rttemberg), which developed into an important centre in the 6th century BC. 

The main part of the settlement can be divided into a plateau (3 ha) and a bailey (1.5 ha).
Outside of these fortified areas, the outer settlement extended to possibly 100 ha on the plain, most of which was probably used for agriculture.

The influence of the town probably also extended to the wider surroundings of the area, as burial grounds and cult sites are also attributed to the Heuneburg."
autowrap = true

[connection signal="pressed" from="Button_moreInfo" to="." method="_on_Button_moreInfo_pressed"]
[connection signal="pressed" from="Button_moreInfo2" to="." method="_on_Button_moreInfo2_pressed"]
[connection signal="pressed" from="Button_back" to="." method="_on_Button_back_pressed"]
